--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,9 @@ authors = ["rushmorem <rushmore@webenchanter.com>"]
 
 [features]
 serde = ["uuid/serde"]
-use_std = ["uuid/use_std"]
 
 [dependencies]
 chrono = "0.4"
 lazy_static = "0.2"
-uuid = { version = "0.5", features = ["v1", "v4"] }
 rand = "0.3"
+uuid = { version = "0.5", features = ["v1", "v4", "use_std"] }
